<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#ccc"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        />

    <TextView
        android:id="@+id/title"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_default"
        android:drawableStart="@android:drawable/ic_dialog_alert"
        android:drawablePadding="@dimen/space_default"
        android:drawableTint="#afff"
        android:paddingStart="@dimen/space_default"
        android:text="@string/title_call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@android:drawable/ic_dialog_alert"
        android:paddingLeft="@dimen/space_default" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_default"
        android:layout_marginBottom="@dimen/space_default"
        android:src="@drawable/ic_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/space_default" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/corporate_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_huge"
        android:hint="@string/reception_company"
        android:textColorHint="@color/gray_dark"
        app:boxBackgroundColor="@color/white_transparent"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_chainStyle="spread_inside"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/corporate_name_edit_text"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reception_name"
        android:textColorHint="@color/gray_dark"
        app:boxBackgroundColor="@color/white_transparent"
        app:layout_constraintBottom_toTopOf="@id/purpose"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/corporate_name"
        app:layout_constraintVertical_chainStyle="spread_inside"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/purpose"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reception_purpose"
        android:textColorHint="@color/gray_dark"
        app:boxBackgroundColor="@color/white_transparent"
        app:layout_constraintBottom_toTopOf="@id/calling_button"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintVertical_chainStyle="spread_inside"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purpose_edit_text"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/calling_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/space_huge"
        android:background="@drawable/bg_reception_button"
        android:foreground="?selectableItemBackground"
        android:paddingTop="@dimen/space_xxl"
        android:paddingBottom="@dimen/space_xxl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintTop_toBottomOf="@id/purpose"
        app:layout_constraintVertical_chainStyle="spread_inside"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/space_default"
            android:src="@drawable/ic_notifications_active"
            android:layout_marginLeft="@dimen/space_default" />

        <TextView
            android:id="@+id/no_appointment_calling_button_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reception_call"
            android:textSize="24sp"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
